--- a/Churches/com.churches.by/src/main/res/values/strings.xml
+++ b/Churches/com.churches.by/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Churches</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="search_title">Search</string>
+    <string name="search_hint">Search hint</string>
 
 </resources>
