--- a/Churches/com.churches.by/src/main/res/values/strings.xml
+++ b/Churches/com.churches.by/src/main/res/values/strings.xml
@@ -9,5 +9,10 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="nav_drawer_about">About</string>
+    <string name="nav_drawer_settings">Settings</string>
+    <string name="nav_drawer_map">Map</string>
+    <string name="nav_drawer_list">List</string>
+    <string name="nav_drawer_favorites">Favorites</string>
 
 </resources>
