--- a/Churches/com.churches.by/src/main/res/values/strings.xml
+++ b/Churches/com.churches.by/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="nav_drawer_list">List</string>
 
     <string name="events_list_title">Parish events</string>
+    <string name="schedule_list_title">Schedule</string>
     <string name="mass_schedule">Schedule</string>
     <string name="schedule_item_template" formatted="false">%d) %s</string>
     <string name="show_on_map">Show on map</string>
